Fix bug with having FuzzyDateInputs wrapped by a label. Also use month names in PeriodInput instead of numbers.

--- a/app/assets/stylesheets/dulu.css
+++ b/app/assets/stylesheets/dulu.css
@@ -163,6 +163,10 @@ label {
     font-weight: bold;
 }
 
+label.block {
+    display: block;
+}
+
 h3 label {
     font-size: 14px;
 }
